src/objects/Deal_Stoplight_Standard__c.object
<CustomObject>
    <fields>
        <fullName>CP_Attach_Approver__c</fullName>
        <label>CP Attach Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Attach_Standard__c</fullName>
        <label>CP Attach Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Attach_VM__c</fullName>
        <label>CP Attach VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_Approver__c</fullName>
        <label>Carrier Branding Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_Standard__c</fullName>
        <label>Carrier Branding Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Branding_VM__c</fullName>
        <label>Carrier Branding VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_Approver__c</fullName>
        <label>Channel Fill Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_Standard__c</fullName>
        <label>Channel Fill Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Fill_VM__c</fullName>
        <label>Channel Fill VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_Approver__c</fullName>
        <label>Charger / Accessories Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_Standard__c</fullName>
        <description>Value Products Only</description>
        <inlineHelpText>Value Products Only</inlineHelpText>
        <label>Charger / Accessories Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charger_Accessories_VM__c</fullName>
        <label>Charger / Accessories VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_App__c</fullName>
        <label>Core Device Specifications App</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_Std__c</fullName>
        <label>Core Device Specifications Std</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Device_Specifications_VM__c</fullName>
        <label>Core Device Specifications VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_Approver__c</fullName>
        <label>ELX = Prepaid Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_Standard__c</fullName>
        <label>ELX = Prepaid Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ELX_Prepaid_VM__c</fullName>
        <label>ELX = Prepaid VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Forecasting_Approver__c</fullName>
        <label>Forecasting Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasting_Standard__c</fullName>
        <label>Forecasting Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecasting_VM__c</fullName>
        <label>Forecasting VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IPP_Approver__c</fullName>
        <label>IPP Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPP_Standard__c</fullName>
        <label>IPP Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPP_VM__c</fullName>
        <label>IPP VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Incoterms_Approver__c</fullName>
        <label>Incoterms Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_Standard__c</fullName>
        <label>Incoterms Standard</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoterms_VM__c</fullName>
        <label>Incoterms VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_Approver__c</fullName>
        <label>Late Delivery Penalty Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_Standard__c</fullName>
        <label>Late Delivery Penalty Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Delivery_Penalty_VM__c</fullName>
        <label>Late Delivery Penalty VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MDF_Approver__c</fullName>
        <label>MDF Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_Standard__c</fullName>
        <label>MDF Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDF_VM__c</fullName>
        <label>MDF VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MFN_Approver__c</fullName>
        <label>MFN Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFN_Standard__c</fullName>
        <label>MFN Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFN_VM__c</fullName>
        <label>MFN VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_Approver__c</fullName>
        <label>Not to Exceed Retail Price Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_Standard__c</fullName>
        <label>Not to Exceed Retail Price Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed_Retail_Price_VM__c</fullName>
        <label>Not to Exceed Retail Price VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Approver__c</fullName>
        <label>Payment Terms Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Standard__c</fullName>
        <label>Payment Terms Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_VM__c</fullName>
        <label>Payment Terms VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_Approver__c</fullName>
        <label>Product Exclusivity Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_Standard__c</fullName>
        <label>Product Exclusivity Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Exclusivity_VM__c</fullName>
        <label>Product Exclusivity VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Provision_Type__c</fullName>
        <label>Provision Type</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SW_Updates_Approver__c</fullName>
        <label>SW Updates Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Updates_Standard__c</fullName>
        <label>SW Updates Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Updates_VM__c</fullName>
        <label>SW Updates VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_Approver__c</fullName>
        <label>Seeding/Demo Units Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_Std__c</fullName>
        <label>Seeding/Demo Units Std</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seeding_Demo_Units_VM__c</fullName>
        <label>Seeding/Demo Units VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_Approver__c</fullName>
        <label>Sell-Through Plan Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_Standard__c</fullName>
        <label>Sell-Through Plan Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Through_Plan_VM__c</fullName>
        <label>Sell-Through Plan VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_Approver__c</fullName>
        <label>Shipping and Handling Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_Standard__c</fullName>
        <label>Shipping and Handling Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_and_Handling_VM__c</fullName>
        <label>Shipping and Handling VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_Approver__c</fullName>
        <label>Software PreLoads Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_Std__c</fullName>
        <label>Software PreLoads Std</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_PreLoads_VM__c</fullName>
        <label>Software PreLoads VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_Approver__c</fullName>
        <label>Volume Commitment Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_Standard__c</fullName>
        <label>Volume Commitment Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Commitment_VM__c</fullName>
        <label>Volume Commitment VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_Approver__c</fullName>
        <label>Warranty Service/Repair Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_Std__c</fullName>
        <label>Warranty Service/Repair Std</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Warranty_Service_Repair_VM__c</fullName>
        <label>Warranty Service/Repair VM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_Approver__c</fullName>
        <label>Warranty Term Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_Standard__c</fullName>
        <label>Warranty Term Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Term_VM__c</fullName>
        <label>Warranty Term VM</label>
        <type>Url</type>
    </fields>
    <label>Deal Stoplight Standard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Provision_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Provision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Stoplight Standards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>